# repo_auditor

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
-OutputRoot/: batch-summary.json  batch-summary.md
-OutputRoot/MatALass/: MatALass-github-user-audit.json  MatALass-github-user-audit.md
config/: portfolio_policy.json
docs/: review-workflow.md
reports/: MatALass-EFREI-github-org-audit.json  MatALass-EFREI-github-org-audit.md
scripts/: analyze_review_queue.py  audit_all_orgs.ps1  audit_all_orgs.sh  audit_all_targets.ps1  bootstrap_review_queue.py  build_batch_summary.py  export_review_queue.py  run_full_portfolio_audit.ps1  run_full_portfolio_audit.sh  run_repo_auditor.ps1  run_repo_auditor.sh
src/repo_auditor/: __init__.py  cli.py  github_client.py  github_scanner.py  github_workspace.py  issue_catalog.py  local_scanner.py  maturity.py  models.py  planner.py  portfolio_policy.py  report.py  rules.py  scoring.py  serialization.py  workspace.py
tests/: test_analyze_review_queue.py  test_batch_summary.py  test_cli.py  test_export_review_queue.py  test_github_client.py  test_github_scanner.py  test_github_workspace.py  test_local_scanner.py  test_maturity.py  test_project_type_detection.py  test_project_type_scoring.py  test_report.py  test_rules_readme_metadata.py  test_scoring.py  test_scoring_metadata.py  test_serialization.py  test_workspace.py
